# mynextproject

./: pyproject.toml
src/mynextproject/: __init__.py  cli.py
src/mynextproject/archive/: mytool.py
