[project]
name = "mynextproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Markiewicz", email = "effigies@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pybids>=0.17.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mnp = "mynextproject.cli:main"
